[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player/Megaman/MegamanNonFSM.gd" type="Script" id=1]
[ext_resource path="res://Player/Megaman/Models/Buster.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Megaman/Camera.gd" type="Script" id=4]

[sub_resource type="CapsuleShape" id=64]
radius = 0.5
height = 0.5

[sub_resource type="AudioStreamRandomPitch" id=65]

[node name="Megaman" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.991912, 0 )
shape = SubResource( 64 )

[node name="megaman" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0 )

[node name="Buster" parent="megaman" instance=ExtResource( 2 )]

[node name="AnimationTree" parent="megaman/Buster" index="2"]
parameters/ag_transition/current = 0
parameters/jump_blend/blend_position = 0

[node name="Camroot" type="Spatial" parent="."]
script = ExtResource( 4 )

[node name="DirectionalLight" type="DirectionalLight" parent="Camroot"]
transform = Transform( 1, 0, 0, 0, -0.34202, 0.939693, 0, -0.939693, -0.34202, 0, 2.579, -2 )
light_energy = 0.388
light_specular = 6.707
shadow_enabled = true
directional_shadow_bias_split_scale = 0.0
directional_shadow_depth_range = 1
directional_shadow_max_distance = 8192.0

[node name="h" type="Spatial" parent="Camroot"]

[node name="v" type="Spatial" parent="Camroot/h"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.27412, 0 )

[node name="Camera" type="ClippedCamera" parent="Camroot/h/v"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, -3.15555 )
process_mode = 1

[node name="Status" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Status"]
margin_right = 40.0
margin_bottom = 14.0

[node name="roll_timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1
one_shot = true

[node name="roll_window" type="Timer" parent="."]
process_mode = 0
wait_time = 0.5
one_shot = true

[node name="aim_stay_delay" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="shoot_timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.62
one_shot = true

[node name="shoot_sfx" type="AudioStreamPlayer" parent="."]
stream = SubResource( 65 )

[node name="StateMachine" type="Node" parent="."]

[editable path="megaman/Buster"]
